# shrinkmusic

./: ChangeLog.md  LICENSE  Main.hs  README  default.nix  fourmolu.yaml  shrinkmusic.cabal  shrinkmusic.nix
src/: Prelude.hs
src/ShrinkMusic/: FileFormats.hs  Interpret.hs  Main.hs  Mapping.hs  Options.hs  PathMunge.hs  PathTree.hs
