cabal-version:       2.2
name:                shrinkmusic
version:             0.1.0.0
synopsis:            shrink a directory of music into another directory
license:             BSD-3-Clause
license-file:        LICENSE
author:              Mike Ledger
maintainer:          mike@quasimal.com
category:            Sound
build-type:          Simple

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -Wno-name-shadowing -fprint-explicit-foralls -fprint-explicit-kinds
    -fdefer-typed-holes

  mixins:
    base hiding (Prelude),
    base (Prelude as BasePrelude)

  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    UndecidableInstances
    ViewPatterns
    ExplicitNamespaces

  build-depends:       base,
                       turtle >= 1.6,
                       optics,
                       optics-th,
                       foldl,
                       text,
                       exceptions,
                       bytestring,
                       parallel-io,
                       mtl,
                       containers,
                       time,
                       terminal-progress-bar,
                       temporary,
                       streaming,
                       streaming-bytestring,
                       directory-ospath-streaming,
                       filepath,
                       log-effectful,
                       effectful,
                       relude,
                       unix,
                       vector,
                       witherable

executable shrinkmusic
  import:              shared
  main-is:             ShrinkMusic/Main.hs
  other-modules:       Prelude
                       ShrinkMusic.FileFormats
                       ShrinkMusic.Mapping
                       ShrinkMusic.Options
                       ShrinkMusic.PathTree
  hs-source-dirs:      src
  ghc-options:         -O2 -threaded -rtsopts
  default-language:    Haskell2010
